--- a/App/MyApplication/app/src/main/res/layout/fragment_recipe.xml
+++ b/App/MyApplication/app/src/main/res/layout/fragment_recipe.xml
@@ -8,13 +8,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
+        android:layout_height="75dp"
+        android:orientation="vertical"
         android:weightSum="4">
 
         <TextView
             android:id="@+id/recipeTitle"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/recipeTime"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
