--- a/App/MyApplication/app/src/main/res/layout/fragment_main.xml
+++ b/App/MyApplication/app/src/main/res/layout/fragment_main.xml
@@ -17,6 +17,7 @@
         android:weightSum="2">
 
         <Button
+            android:id="@+id/findButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -24,6 +25,7 @@
             android:text="Find Recipes"/>
 
         <Button
+            android:id="@+id/savedButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
