--- a/App/MyApplication/app/src/main/res/layout/list_card.xml
+++ b/App/MyApplication/app/src/main/res/layout/list_card.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="75dp"
               android:orientation="horizontal"
-              android:padding="12dp"
               android:weightSum="4">
 
     <ImageView
         android:id="@+id/itemIcon"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_height="75dp"
+        android:layout_weight="1"
+        android:padding="10dp"/>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/itemTitle"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Title"
             android:textSize="20sp"
             android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/itemTime"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="time"/>
     </LinearLayout>
 
 
